--- a/src/Home.Blog.Mvc/Views/_ViewImports.cshtml
+++ b/src/Home.Blog.Mvc/Views/_ViewImports.cshtml
@@ -1,5 +1,5 @@
 @using Piranha.AspNetCore.Models
-@using _shannon.Models
+@using Home.Blog.Mvc.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @inject Piranha.AspNetCore.Services.IApplicationService WebApp
 @inject Microsoft.AspNetCore.Authorization.IAuthorizationService Auth
